--- a/1.5/Languages/English/Keyed/RimRound_Keys.xml
+++ b/1.5/Languages/English/Keyed/RimRound_Keys.xml
@@ -446,14 +446,15 @@
 - Niwatori401
 
 Concept, design
-- Niwatori401
 - Ultranova
+- Niwatori401
 
 Art, Sprite work, UI
 - BambooAle
 - ArtOfFire1
 - Ultranova
 - Bloopy
+- Toggle
 
 Writing, flavor text
 - Ultranova
