Fix various typos

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: b27d5ffad697f2f4f8ad77c37776f1505b8fe150
+Commit Hash: 32071947c2b9a694bea3acd22251ee36bc083c14
+Author: Niwatori401
+Date: Thu Jun 20 04:59:08 2024
+
+Fix various typos
+
+==================================================
+Commit Hash: 141cfbc9eb2b29e93c4ac72f805d4a5c6e6e2b8a
 Author: Niwatori401
 Date: Thu Jun 20 04:45:56 2024
 
