Fix error in huge fine meal recipe

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: fcb6d6f22380f76c2843a84f5cc4b3cb95fc2a8b
+Commit Hash: 68688a657fcf4a9d208ceb9e51df140921d35294
+Author: Niwatori401
+Date: Fri Jun 21 03:21:51 2024
+
+Fix error in huge fine meal recipe
+
+==================================================
+Commit Hash: c2148c54a1f5fe72f71b8d57df1e8be353e33754
 Author: Niwatori401
 Date: Thu Jun 20 05:28:41 2024
 
