Fix earlier typo for recipe products

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: a58929f65c4f5304a948c65be7c9db7c3e00a613
+Commit Hash: 060f8acc3b44fa3e1b0957a182da07cde8183dbe
+Author: Niwatori401
+Date: Fri Jun 21 04:25:28 2024
+
+Fix earlier typo for recipe products
+
+==================================================
+Commit Hash: 432aad257f588d3bfe536122567841e3f118bd7f
 Author: Niwatori401
 Date: Fri Jun 21 03:21:51 2024
 
