Fix earlier typo for recipe products

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: 68688a657fcf4a9d208ceb9e51df140921d35294
+Commit Hash: ddc35ca30bd768e0b495ee0639971471d71621cf
+Author: Niwatori401
+Date: Fri Jun 21 04:25:28 2024
+
+Fix earlier typo for recipe products
+
+==================================================
+Commit Hash: 832266a96d91de309fb6a25cd48dd68e163c34b7
 Author: Niwatori401
 Date: Fri Jun 21 03:21:51 2024
 
