--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: ddc35ca30bd768e0b495ee0639971471d71621cf
+Commit Hash: d2d3662ab053b6f7a9320285977a618a11964057
+Author: Niwatori401
+Date: Fri Jun 21 04:26:07 2024
+
+Make Novatech gloves mutually exclusive with VAE gloves
+
+==================================================
+Commit Hash: 5e75c5f1e309f5a11bfb7105e9bfbbf6213e0725
 Author: Niwatori401
 Date: Fri Jun 21 04:25:28 2024
 
